boilerplate fuse code

--- a/solution/Makefile
+++ b/solution/Makefile
@@ -15,3 +15,13 @@ mkfs:
 .PHONY: clean
 clean:
 	rm -rf $(BINS)
+
+
+.PHONY: cbwfs
+cbwfs: clean wfs
+
+.PHONY: cbmkfs
+cbwfs: clean mkfs
+
+.PHONY: cba
+cba: clean mkfs wfs
