add helper functions

--- a/solution/Makefile
+++ b/solution/Makefile
@@ -3,6 +3,14 @@ CC = gcc
 CFLAGS = -Wall -Werror -pedantic -std=gnu18 -g
 FUSE_CFLAGS = `pkg-config fuse --cflags --libs`
 
+# Default to no debug
+DEBUG ?= 0
+
+# Add debug flag conditionally
+ifeq ($(DEBUG),1)
+    CFLAGS += -DDEBUG
+endif
+
 
 .PHONY: all
 all: $(BINS)
@@ -17,11 +25,21 @@ clean:
 	rm -rf $(BINS)
 
 
+# .PHONY: cbwfs
+# cbwfs: clean wfs
+
+# .PHONY: cbmkfs
+# cbmkfs: clean mkfs
+
 .PHONY: cbwfs
-cbwfs: clean wfs
+cbwfs: clean
+	$(MAKE) wfs CFLAGS="$(CFLAGS) -DDEBUG"
 
 .PHONY: cbmkfs
-cbmkfs: clean mkfs
+cbmkfs: clean
+	$(MAKE) mkfs CFLAGS="$(CFLAGS) -DDEBUG"
 
 .PHONY: cba
-cba: clean mkfs wfs
+cba: clean 
+	$(MAKE) mkfs CFLAGS="$(CFLAGS) -DDEBUG"
+	$(MAKE) wfs CFLAGS="$(CFLAGS) -DDEBUG"
